<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:background="?attr/colorPrimaryContainer"
     android:padding="24dp"
     android:orientation="vertical"
     android:paddingBottom="24dp"
     android:paddingTop="40dp">

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="16dp"
         android:textAppearance="?attr/textAppearanceHeadlineSmall"
         android:textColor="?attr/colorOnPrimaryContainer"
         android:text="@string/about" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="4dp"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         android:textColor="?attr/colorOnPrimaryContainer"
         android:text="@string/about_subtile" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="4dp"
         android:alpha="0.75"
         android:textAppearance="?attr/textAppearanceBodySmall"
         android:textColor="?attr/colorOnPrimaryContainer"
         android:id="@+id/nav_headerAppVersion"
         android:text="@string/about_text" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="4dp"
         android:alpha="0.75"
         android:textAppearance="?attr/textAppearanceBodySmall"
         android:textColor="?attr/colorOnPrimaryContainer"
         android:text="@string/about_text2" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="8dp"
         android:alpha="0.75"
         android:textAppearance="?attr/textAppearanceBodySmall"
         android:textColor="?attr/colorOnPrimaryContainer"
         android:text="@string/about_text3" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textAppearance="?attr/textAppearanceLabelSmall"
         android:textColor="?attr/colorError"
         android:text="@string/developed_by" />

</LinearLayout>