<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="?attr/colorSurface"
     tools:context=".settings.AllowedAppsActivity">

    <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:title="@string/title_filter_apps"
             app:navigationIcon="@drawable/ic_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_margin="16dp"
             app:cardElevation="2dp"
             app:cardBackgroundColor="?attr/colorSecondaryContainer"
             app:cardCornerRadius="16dp">

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:padding="16dp"
                 android:orientation="vertical">

                <ImageView
                     android:layout_height="48dp"
                     android:layout_width="48dp"
                     android:src="@drawable/baseline_app_settings_alt_24"
                     android:contentDescription="@string/title_filter_apps"
                     android:tint="?attr/colorOnSecondaryContainer" />

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:gravity="center"
                     android:textAppearance="?attr/textAppearanceTitleMedium"
                     android:textColor="?attr/colorOnSecondaryContainer"
                     android:layout_marginTop="12dp"
                     android:text="@string/splittunneling" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:paddingEnd="16dp"
             android:orientation="vertical"
             android:paddingStart="16dp"
             android:id="@+id/tunnelBanner">

        </LinearLayout>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:paddingEnd="16dp"
             android:orientation="horizontal"
             android:paddingBottom="8dp"
             android:paddingStart="16dp">

            <com.google.android.material.button.MaterialButton
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_marginEnd="8dp"
                 app:cornerRadius="12dp"
                 style="@style/Widget.Material3.Button.TonalButton"
                 android:layout_weight="1"
                 android:id="@+id/btnSelectAll"
                 android:text="@string/block_all" />

            <com.google.android.material.button.MaterialButton
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 app:cornerRadius="12dp"
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:id="@+id/btnDeselectAll"
                 android:text="@string/unblock_all" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
             android:layout_height="0dp"
             android:layout_width="match_parent"
             tools:listitem="@layout/item_app"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_weight="1"
             android:id="@+id/splitRecyclerView" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>